--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,10 @@ msgpack==1.1.0
     # via
     #   -r requirements.in
     #   librosa
+mypy==1.16.0
+    # via -r requirements.in
+mypy-extensions==1.1.0
+    # via mypy
 numba==0.61.2
     # via
     #   -r requirements.in
@@ -84,6 +88,8 @@ packaging==25.0
     #   build
     #   lazy-loader
     #   pooch
+pathspec==0.12.1
+    # via mypy
 pip-tools==7.4.1
     # via -r requirements.in
 platformdirs==4.3.8
@@ -107,7 +113,7 @@ pyproject-hooks==1.2.0
     #   -r requirements.in
     #   build
     #   pip-tools
-requests==2.32.3
+requests==2.32.4
     # via
     #   -r requirements.in
     #   pooch
@@ -150,6 +156,7 @@ typing-extensions==4.14.0
     # via
     #   -r requirements.in
     #   librosa
+    #   mypy
 urllib3==2.4.0
     # via
     #   -r requirements.in
@@ -158,7 +165,7 @@ wheel==0.45.1
     # via
     #   -r requirements.in
     #   pip-tools
-yt-dlp==2025.5.22
+yt-dlp==2025.6.9
     # via -r requirements.in
 
 # The following packages are considered to be unsafe in a requirements file:
