--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,8 @@ cffi==1.17.1
     # via
     #   -r requirements.in
     #   soundfile
+cfgv==3.4.0
+    # via pre-commit
 charset-normalizer==3.4.2
     # via
     #   -r requirements.in
@@ -37,12 +39,18 @@ decorator==5.2.1
     # via
     #   -r requirements.in
     #   librosa
+distlib==0.3.9
+    # via virtualenv
 ffmpeg-python==0.2.0
     # via -r requirements.in
+filelock==3.18.0
+    # via virtualenv
 future==1.0.0
     # via
     #   -r requirements.in
     #   ffmpeg-python
+identify==2.6.12
+    # via pre-commit
 idna==3.10
     # via
     #   -r requirements.in
@@ -96,10 +104,13 @@ platformdirs==4.3.8
     # via
     #   -r requirements.in
     #   pooch
+    #   virtualenv
 pooch==1.8.2
     # via
     #   -r requirements.in
     #   librosa
+pre-commit==4.2.0
+    # via -r requirements.in
 pyaudio==0.2.14
     # via -r requirements.in
 pycparser==2.22
@@ -161,6 +172,8 @@ urllib3==2.4.0
     # via
     #   -r requirements.in
     #   requests
+virtualenv==20.31.2
+    # via pre-commit
 wheel==0.45.1
     # via
     #   -r requirements.in
