--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,8 @@ cffi==1.17.1
     # via
     #   -r requirements.in
     #   soundfile
+cfgv==3.4.0
+    # via pre-commit
 charset-normalizer==3.4.2
     # via
     #   -r requirements.in
@@ -37,12 +39,18 @@ decorator==5.2.1
     # via
     #   -r requirements.in
     #   librosa
+distlib==0.3.9
+    # via virtualenv
 ffmpeg-python==0.2.0
     # via -r requirements.in
+filelock==3.18.0
+    # via virtualenv
 future==1.0.0
     # via
     #   -r requirements.in
     #   ffmpeg-python
+identify==2.6.12
+    # via pre-commit
 idna==3.10
     # via
     #   -r requirements.in
@@ -66,6 +74,10 @@ msgpack==1.1.0
     # via
     #   -r requirements.in
     #   librosa
+mypy==1.16.0
+    # via -r requirements.in
+mypy-extensions==1.1.0
+    # via mypy
 numba==0.61.2
     # via
     #   -r requirements.in
@@ -84,16 +96,21 @@ packaging==25.0
     #   build
     #   lazy-loader
     #   pooch
+pathspec==0.12.1
+    # via mypy
 pip-tools==7.4.1
     # via -r requirements.in
 platformdirs==4.3.8
     # via
     #   -r requirements.in
     #   pooch
+    #   virtualenv
 pooch==1.8.2
     # via
     #   -r requirements.in
     #   librosa
+pre-commit==4.2.0
+    # via -r requirements.in
 pyaudio==0.2.14
     # via -r requirements.in
 pycparser==2.22
@@ -107,7 +124,7 @@ pyproject-hooks==1.2.0
     #   -r requirements.in
     #   build
     #   pip-tools
-requests==2.32.3
+requests==2.32.4
     # via
     #   -r requirements.in
     #   pooch
@@ -150,15 +167,18 @@ typing-extensions==4.14.0
     # via
     #   -r requirements.in
     #   librosa
+    #   mypy
 urllib3==2.4.0
     # via
     #   -r requirements.in
     #   requests
+virtualenv==20.31.2
+    # via pre-commit
 wheel==0.45.1
     # via
     #   -r requirements.in
     #   pip-tools
-yt-dlp==2025.5.22
+yt-dlp==2025.6.9
     # via -r requirements.in
 
 # The following packages are considered to be unsafe in a requirements file:
