--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
-          pip install ruff mypy
+          pip install -r requirements.txt
+          pip install -e .
 
       - name: Lint code with ruff
         run: ruff check --output-format=github .
@@ -31,3 +32,6 @@ jobs:
 
       - name: Run mypy
         run: mypy .
+
+      - name: Run tests with pytest
+        run: pytest -v
